sonardcloud and IDE suggestions